--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Privacy policy for OrderSplit Pro</title>
+  <title>Privacy policy for Delivery Reminder:Email Dates app</title>
 </head>
 <body>
  
 <h2 style = "text-decoration:underline">Privacy policy for Delivery Reminder:Email Dates app </h1>
-<p><At OrderSplit Pro, we respect your privacy and are committed to protecting it. This Privacy Policy explains our policies and practices regarding the collection, use, storage, and disclosure of your personal information by OrderSplit Pro.</p>
+<p><At Delivery Reminder:Email Dates, we respect your privacy and are committed to protecting it. This Privacy Policy explains our policies and practices regarding the collection, use, storage, and disclosure of your personal information by Delivery Reminder:Email Dates</p>
 
 <h3>## Information We Collect</h3>
 
@@ -26,6 +26,6 @@
 
 <h3>## Contact Us</h3>
 
-<p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at ordersplitpro@gmail.com.</p>
+<p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at flexcommerceapps@gmail.com.</p>
 </body>
 </html>
